--- a/AmpM/AmpM/TagDetails.xaml
+++ b/AmpM/AmpM/TagDetails.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="AmpM.ArtistDetails"
+    x:Class="AmpM.TagDetails"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -18,55 +18,15 @@
     local:TiltEffect.IsTiltEnabled="True"
     >
 
-
-    <phone:PhoneApplicationPage.Resources>
-
-        <DataTemplate x:Key="albumGroupHeader">
-            <Border Background="#25B8D9" Margin="0">
-                <TextBlock Text="{Binding Title}" FontSize="36" Foreground="Black"/>
-            </Border>
-        </DataTemplate>
-
-        <DataTemplate x:Key="albumItemTemplate">
-            <StackPanel Orientation="Horizontal">
-                <Image Source="{Binding ArtUrl}" Height="100" Width="100" />
-                <StackPanel >
-                    <TextBlock Text="{Binding AlbumName}"  TextWrapping="NoWrap" Margin="20,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" HorizontalAlignment="Left" />
-                    <TextBlock Text="{Binding ArtistName}"  TextWrapping="NoWrap" Margin="20,0,0,0" Style="{StaticResource PhoneTextLargeStyle}" HorizontalAlignment="Left" />
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding AlbumTracks}"  TextWrapping="NoWrap" Margin="40,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" />
-                        <TextBlock Text=" tracks" TextWrapping="NoWrap" Margin="0,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" />
-                    </StackPanel>
-                </StackPanel>
-            </StackPanel>
-        </DataTemplate>
-
-        <DataTemplate x:Key="albumItemHeader">
-            <Border Background="#9f283f" Margin="{StaticResource PhoneTouchTargetOverhang}" Padding="{StaticResource PhoneTouchTargetOverhang}">
-                <TextBlock Text="{Binding Title}" Width="460" Style="{StaticResource PhoneTextLargeStyle}" Foreground="Black"/>
-            </Border>
-        </DataTemplate>
-
-    </phone:PhoneApplicationPage.Resources>
-
+    <!--LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot">
 
         <toolkit:PerformanceProgressBar x:Name="performanceProgressBarCustomized" Foreground="Red" Background="Red" IsIndeterminate="False"  />
 
-        <controls:Panorama Title="artist details" x:Name="panoramaTitle">
+        <controls:Panorama Title="tag details" x:Name="panoramaTitle">
 
             <controls:PanoramaItem Header="albums">
                 <Grid>
-
-                    <!--
-                    <toolkit:LongListSelector x:Name="AlbumsLL"
-                     GroupHeaderTemplate="{StaticResource albumGroupHeader}"
-                     ItemTemplate="{StaticResource albumItemTemplate}" 
-                     GroupItemTemplate="{StaticResource albumItemHeader}"
-                     ShowListFooter="False" ShowListHeader="False" SelectionChanged="AlbumsLL_SelectionChanged">
-                    </toolkit:LongListSelector>
-                    -->
-
 
                     <ListBox x:Name="albumList" SelectionChanged="albumList_SelectionChanged"  >
 
@@ -87,9 +47,37 @@
                         </ListBox.ItemTemplate>
 
                     </ListBox>
-
+                    
                 </Grid>
             </controls:PanoramaItem>
+
+            <!--Panorama item two-->
+            <controls:PanoramaItem Header="artists">
+                <Grid>
+
+                    <ListBox x:Name="artistList" SelectionChanged="artistList_SelectionChanged"  >
+
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel>
+                                    <TextBlock Text="{Binding ArtistName}"  TextWrapping="NoWrap" Margin="20,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" HorizontalAlignment="Left" />
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding ArtistAlbums}"  TextWrapping="NoWrap" Margin="40,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" />
+                                        <TextBlock Text=" albums" TextWrapping="NoWrap" Margin="0,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding ArtistTracks}"  TextWrapping="NoWrap" Margin="60,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" />
+                                        <TextBlock Text=" tracks" TextWrapping="NoWrap" Margin="0,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" />
+                                    </StackPanel>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+
+                    </ListBox>
+                    
+                </Grid>
+            </controls:PanoramaItem>
+
 
             <controls:PanoramaItem Header="songs">
                 <Grid>
@@ -110,7 +98,7 @@
                                             <toolkit:MenuItem x:Name="queueAllShuffled" Header="Queue all, shuffled" Click="queueAllShuffled_Click" />
                                         </toolkit:ContextMenu>
                                     </toolkit:ContextMenuService.ContextMenu>
-                                    
+
                                     <Image Source="{Binding ArtUrl}" Height="100" Width="100" />
                                     <StackPanel >
                                         <TextBlock Text="{Binding SongName}"  TextWrapping="NoWrap" Margin="20,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" HorizontalAlignment="Left" />
@@ -128,12 +116,13 @@
                         </ListBox.ItemTemplate>
 
                     </ListBox>
-                    
+
                 </Grid>
             </controls:PanoramaItem>
-            
+
         </controls:Panorama>
     </Grid>
 
+    <!--Panorama-based applications should not show an ApplicationBar-->
 
 </phone:PhoneApplicationPage>
